# MD_Mag_3

./: .gitignore  README.md  main.py  pyproject.toml
examples/: test_chain_formation.py  test_two_particle_chain.py
src/magnetic_md/: __init__.py  fields.py  particles.py  simulation.py  visualization.py
tests/: test_chains.py  test_particles.py  test_simulation.py
